# frontend.wasm

./: .gitignore  CMakeLists.txt  README.md
cmake/: Catch2Helpers.cmake
include/Frontend/Wasm/: frontend.hpp
src/Embind/: checkType.cpp  checkType.hpp  createFunctions.cpp  createFunctions.hpp  getOverloadedFunctions.cpp  getOverloadedFunctions.hpp  joinCalls.hpp
src/Embind/Builders/: attributeBuilder.cpp  attributeBuilder.hpp  classBuilder.cpp  classBuilder.hpp  enumBuilder.cpp  enumBuilder.hpp  functionBuilder.cpp  functionBuilder.hpp  moduleBuilder.cpp  moduleBuilder.hpp  moduleFileBuilder.cpp  moduleFileBuilder.hpp  typeToStringBuilder.cpp  typeToStringBuilder.hpp
src/Embind/Helpers/: combine.hpp  split.cpp  string.cpp  trampolineClass.cpp  trampolineClass.hpp  types.cpp  types.hpp
src/Embind/Proxy/: attribute.cpp  attribute.hpp  class.cpp  class.hpp  enum.cpp  enum.hpp  function.cpp  function.hpp  module.cpp  module.hpp  moduleFile.cpp  moduleFile.hpp
src/Frontend/Wasm/: frontend.cpp
tests/: CMakeLists.txt  arrays.cpp  classes.cpp  complex.cpp  deques.cpp  enums.cpp  filesystem_paths.cpp  functional.cpp  functions.cpp  globalVariables.cpp  inheritence.cpp  lists.cpp  maps.cpp  namespaceRenaming.cpp  namespaces.cpp  optionals.cpp  overloadedFunctions.cpp  pairs.cpp  sets.cpp  smartPointers.cpp  templates.cpp  tuples.cpp  unordered_maps.cpp  unordered_sets.cpp  userDefined.cpp  valarrays.cpp  variants.cpp  vectors.cpp  virtualInheritence.cpp
tests/Embind/: checkType.cpp
tests/Embind/Builders/: attributeBuilder.cpp  classBuilder.cpp  enumBuilder.cpp  functionBuilder.cpp  moduleFileBuilder.cpp  typeToStringBuilder.cpp
tests/Embind/Helpers/: combine.cpp  string.cpp
tests/Embind/Proxy/: attribute.cpp  class.cpp  enum.cpp  function.cpp  module.cpp  moduleFile.cpp
tests/TestUtil/include/TestStage/: paths.cpp.in  paths.hpp
tests/TestUtil/include/TestUtil/: embindStage.cpp  embindStage.hpp  files.hpp  finders.hpp  parse.cpp  parse.hpp  string.hpp  types.hpp
tests/testStage/: CMakeLists.txt
tests/testStage/EmscriptenStage/: CMakeLists.txt
tests/testStage/EmscriptenStage/src/: myModule.cpp
tests/testStage/cmake/: GetEmscripten.cmake
tests/testStage/src/: myModule.cpp
tools/packaging/: CMakeLists.txt
